@@ -17,11 +17,10 @@ whichthck = 4
 whichflwa = 1
 whichisot = 1
 whichslip = 1
-whichbwat = 9
+whichbwat = 2
 whichmarn = 0
 whichbtrc = 1
 whichacab = 1
-whichstrs = 4
 whichevol = 2
 whichwvel = 0
 whichprecip = 3/
